--- a/Task-CoreData/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Task-CoreData/Views/Storyboards/Base.lproj/Main.storyboard
@@ -4,6 +4,192 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Task List Table View Controller-->
+        <scene sceneID="D9A-wJ-cEB">
+            <objects>
+                <tableViewController id="hhM-Fd-FcG" customClass="TaskListTableViewController" customModule="Task_CoreData" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="GA7-UG-NPT">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="70" id="cmq-lT-XxE" customClass="TaskTableViewCell" customModule="Task_CoreData" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="70"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cmq-lT-XxE" id="dOE-Eh-ca9">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xar-Ve-SKD">
+                                            <rect key="frame" x="20.5" y="17" width="373" height="36"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8nh-UE-10d">
+                                                    <rect key="frame" x="0.0" y="0.0" width="327" height="36"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="36" id="yri-KD-VyV"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b7I-Be-bdZ">
+                                                    <rect key="frame" x="337" y="0.0" width="36" height="36"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="b7I-Be-bdZ" secondAttribute="height" multiplier="1:1" id="bzG-dT-VHg"/>
+                                                    </constraints>
+                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                    <state key="normal">
+                                                        <imageReference key="image" image="square" catalog="system" symbolScale="large" renderingMode="hierarchical">
+                                                            <hierarchicalColors>
+                                                                <color systemColor="labelColor"/>
+                                                                <color systemColor="secondaryLabelColor"/>
+                                                                <color systemColor="tertiaryLabelColor"/>
+                                                            </hierarchicalColors>
+                                                        </imageReference>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="checkButtonTapped:" destination="cmq-lT-XxE" eventType="touchUpInside" id="1jc-YX-bfA"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="xar-Ve-SKD" firstAttribute="width" secondItem="dOE-Eh-ca9" secondAttribute="width" multiplier="0.9" id="Mg5-Is-drP"/>
+                                        <constraint firstItem="xar-Ve-SKD" firstAttribute="centerX" secondItem="dOE-Eh-ca9" secondAttribute="centerX" id="avf-TH-Vqq"/>
+                                        <constraint firstItem="xar-Ve-SKD" firstAttribute="centerY" secondItem="dOE-Eh-ca9" secondAttribute="centerY" id="mm7-AY-Y12"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="checkButton" destination="b7I-Be-bdZ" id="riR-tP-apf"/>
+                                    <outlet property="taskNameLabel" destination="8nh-UE-10d" id="aB7-rl-nZJ"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="hhM-Fd-FcG" id="ci7-85-ze8"/>
+                            <outlet property="delegate" destination="hhM-Fd-FcG" id="ECN-W8-jGF"/>
+                        </connections>
+                    </tableView>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="56z-iO-RfK">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="9cb-5J-gWU">
+                            <connections>
+                                <segue destination="dYy-0T-M8E" kind="show" identifier="toAddNewTask" id="9Q8-Nv-6Xb"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a6G-ut-qqw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="47.826086956521742" y="109.82142857142857"/>
+        </scene>
+        <!--Task Details View Controller-->
+        <scene sceneID="OMC-z1-Du3">
+            <objects>
+                <viewController id="dYy-0T-M8E" customClass="TaskDetailsViewController" customModule="Task_CoreData" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="D5h-ql-aDJ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="mAu-iP-AHV">
+                                <rect key="frame" x="20.5" y="100" width="373" height="507.5"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter task name..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4fj-vh-DBr">
+                                        <rect key="frame" x="19" y="0.0" width="335" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="36" id="Sq7-O8-f71"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter  notes here..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="RaP-n2-ZYj">
+                                        <rect key="frame" x="19" y="60" width="335" height="387.5"/>
+                                        <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                        <color key="textColor" systemColor="labelColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="5" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="MJt-8J-1je">
+                                        <rect key="frame" x="19" y="471.5" width="335" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="36" id="z7U-8M-CXZ"/>
+                                        </constraints>
+                                    </datePicker>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="RaP-n2-ZYj" firstAttribute="width" secondItem="mAu-iP-AHV" secondAttribute="width" multiplier="0.9" id="4Rv-FS-AMB"/>
+                                    <constraint firstItem="4fj-vh-DBr" firstAttribute="width" secondItem="mAu-iP-AHV" secondAttribute="width" multiplier="0.9" id="PrE-CF-tlg"/>
+                                    <constraint firstItem="MJt-8J-1je" firstAttribute="width" secondItem="mAu-iP-AHV" secondAttribute="width" multiplier="0.9" id="XPc-fI-GAi"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Ntq-l1-diz"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="mAu-iP-AHV" firstAttribute="width" secondItem="Ntq-l1-diz" secondAttribute="width" multiplier="0.9" id="1R7-g5-a0e"/>
+                            <constraint firstItem="mAu-iP-AHV" firstAttribute="top" secondItem="Ntq-l1-diz" secondAttribute="top" constant="12" id="4cc-2m-Wox"/>
+                            <constraint firstItem="mAu-iP-AHV" firstAttribute="centerX" secondItem="Ntq-l1-diz" secondAttribute="centerX" id="g5Y-S3-O7N"/>
+                            <constraint firstItem="mAu-iP-AHV" firstAttribute="height" secondItem="Ntq-l1-diz" secondAttribute="height" multiplier="0.7" id="iT0-Jp-PAu"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Sza-Ls-v2u">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="K80-OM-lTd">
+                            <connections>
+                                <action selector="saveButtonTapped:" destination="dYy-0T-M8E" id="kob-yn-5dl"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="datePicker" destination="MJt-8J-1je" id="IfD-H1-Ovc"/>
+                        <outlet property="taskNameTextField" destination="4fj-vh-DBr" id="EAD-Gg-j29"/>
+                        <outlet property="taskNotesTextView" destination="RaP-n2-ZYj" id="HKr-5T-BGO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="T1X-tH-dj3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="866.66666666666674" y="109.82142857142857"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="GCO-fM-zMX">
+            <objects>
+                <navigationController id="Ye0-Wf-rD4" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ASe-ua-23W">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="hhM-Fd-FcG" kind="relationship" relationship="rootViewController" id="a5j-xV-z3k"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XrW-Ff-f1k" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-729" y="111"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="square" catalog="system" width="128" height="114"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tertiaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
